syntax = "proto3";

package com.service.auth;

service Auth {
  // Registers a new user with the service.
  rpc RegisterUser(RegisterUserRequest) returns (AuthenticatedUserResponse) {}

  // Password authenticates an existing user with the service.
  rpc AuthenticateUser(AuthenticationRequest)
      returns (AuthenticatedUserResponse) {}
}

enum IdentitySource { Password = 0; }

message RegisterUserRequest {
  string email = 1;
  string given_name = 2;
  string password = 5;
  string token = 6;
}

message AuthenticationRequest {
  string email = 1;
  string password = 3;
}

message AuthenticatedUserResponse {
  message RefreshToken {
    int64 issued_at = 1;
    int64 expires = 2;
    string token = 3;
  }

  string jwt = 1;
  RefreshToken refresh_token = 2;
}
